<resources>
    <string name="app_name">Lab8</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="ip" translatable="false">IP</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="chooseCommand">Choose command</string>
    <string name="settingsIncorrect">Check your data</string>
    <string name="run">Run</string>
    <string name="edit_this">Are you sure, you want to edit row number %s?</string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="edit">Edit</string>
    <string name="loading">Loading</string>
    <string name="draw">Draw</string>
    <string name="choose_language">Choose language</string>
    <string name="remove">Remove</string>
</resources>